parent panel now gets displayed

--- a/gaki/meson.build
+++ b/gaki/meson.build
@@ -7,6 +7,9 @@ sources = [
   'gaki.c',
   ]
 
+cc = meson.get_compiler('c')
+
+m_dep = cc.find_library('m', required : false)
 rlc_dep = dependency('rlc', fallback : ['rlc', 'rlc_dep'], default_options: ['default_library=static'])
 rlso_dep = dependency('rlso', fallback : ['rlso', 'rlso_dep'], default_options: ['default_library=static'])
 rlpw_dep = dependency('rlpw', fallback : ['rlpw', 'rlpw_dep'], default_options: ['default_library=static'])
@@ -15,6 +18,6 @@ rlwcwidth_dep = dependency('rlwcwidth', fallback : ['rlwcwidth', 'rlwcwidth_dep'
 
 gaki = executable('gaki',
   sources,
-  dependencies: [rlc_dep, rlso_dep, rlpw_dep, rltui_dep, rlwcwidth_dep],
+  dependencies: [m_dep, rlc_dep, rlso_dep, rlpw_dep, rltui_dep, rlwcwidth_dep],
   install: true,
   )
