--- a/gaki/meson.build
+++ b/gaki/meson.build
@@ -15,10 +15,9 @@ rlc_dep = dependency('rlc', fallback : ['rlc', 'rlc_dep'], default_options: ['de
 rlso_dep = dependency('rlso', fallback : ['rlso', 'rlso_dep'], default_options: ['default_library=static'])
 rlpw_dep = dependency('rlpw', fallback : ['rlpw', 'rlpw_dep'], default_options: ['default_library=static'])
 rltui_dep = dependency('rltui', fallback : ['rltui', 'rltui_dep'], default_options: ['default_library=static'])
-rlwcwidth_dep = dependency('rlwcwidth', fallback : ['rlwcwidth', 'rlwcwidth_dep'], default_options: ['default_library=static'])
 
 gaki = executable('gaki',
   sources,
-  dependencies: [m_dep, rlc_dep, rlso_dep, rlpw_dep, rltui_dep, rlwcwidth_dep],
+  dependencies: [m_dep, rlc_dep, rlso_dep, rlpw_dep, rltui_dep],
   install: true,
   )
